Removed Clearance and added Devise

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <title>Welcome to Good Stack Samaritan</title>
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+<p>does anything work?</p>
